# opencv_android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/poly/opencv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/poly/opencv/: MainActivity.kt  Theme.kt
app/src/test/java/com/poly/opencv/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
